--- a/1.html
+++ b/1.html
@@ -14,6 +14,9 @@
 
 <h2>HTML</h2>
 
+<P>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/kwS3twdVsko" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</p>
 
 <p>java master <a href="https://www.w3.org/TR/2011/WD-html5-20110405/" target="_blank" title = "html5 specification">jongchan park</a></p>
 <p>html master jongchan park
@@ -22,5 +25,26 @@ css master jongchan park</p>
 <p style="margin-top:45px">javascript master jongchan park
 <strong>programing language master <u>jongchan park</u></strong>
 young and rich jongchan park</p>
+<p>
+  <div id="disqus_thread"></div>
+<script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://web1-n9of8uaw9f.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</p>
 </body>
 </html>
